# AIChatGroup

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/: architecture.md  message-ordering.md
docs/milestone/: M2.md
examples/: providers.example.json  room.example.json
scripts/: replay_demo.py  run_telegram.py  serve.py  tg_check.py  try_storyteller.py
src/aichatgroup/: __init__.py  config.py  logging_setup.py  observability.py  presets.py
src/aichatgroup/director/: __init__.py  base.py  model.py  rule.py
src/aichatgroup/domain/: __init__.py  conversation.py  markers.py  player.py  types.py
src/aichatgroup/engine/: __init__.py  compaction.py  pacing.py  parsing.py  turn.py
src/aichatgroup/gateway/: __init__.py  _translate.py  anthropic_gateway.py  base.py  factory.py  gemini_gateway.py  mock.py  openai_gateway.py  router.py
src/aichatgroup/io/: __init__.py
src/aichatgroup/message/: __init__.py  usher.py
src/aichatgroup/persistence/: store.py
src/aichatgroup/prompt/: __init__.py  builder.py
src/aichatgroup/prompts/: __init__.py  compaction.system.md  compaction.user.md  director.user.md  (+14 more)
tests/: test_compaction.py  test_config.py  test_conversation.py  test_director.py  test_end_detector.py  test_gateway_multi.py  test_ingest_identity.py  test_log_relay.py  test_memory_merge.py  test_observability.py  test_orchestrator.py  test_pacing.py  test_parsing.py  test_player.py  test_presets.py  test_prompt_builder.py  test_prompts.py  test_reply.py  test_store.py  test_storyteller.py  test_turn_replay.py  test_usher.py
(+39 files in other folders)
