[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aichatgroup"
version = "0.0.1"
description = "多模型 AI 群聊引擎 —— transport-agnostic core (M0 骨架)"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
